--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,38 @@
 @font-face {
     font-family: 'SourceSans3';
-    src: url('Fonts/SourceSans3-Regular.ttf') format('truetype'); /* Replace 'your-font-file.ttf' with the actual file name */
-    /* Add additional src lines for different font formats (e.g., woff, woff2) if available */
+    src: url('Fonts/SourceSans3-Regular.ttf') format('truetype'); 
   }
   
   body {
+    background-color: rgb(0,163,224) !important;/* Set your desired background color */
     margin: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: rgb(0,163,224); /* Set your desired background color */
+    font-family: 'SourceSans3', sans-serif;
 }
 
 .center-box {
-    width: 300px; /* Set your desired width */
-    height: 200px; /* Set your desired height */
+  position: absolute;
+    width: 800px; /* Set your desired width */
+    height: 400px; /* Set your desired height */
     background-color: rgb(17,17,17); /* Set your desired background color */
-    border: 2px solid #333; /* Set your desired border color and width */
-    border-radius: 8px; /* Set your desired border radius for rounded corners */
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Optional: Add a box shadow for a subtle effect */
+    padding: 100px 40px 40px 80px;
 }
 
+.overlay-image{
+  position: absolute;
+    top: -80px; 
+    left: 20%; 
+    transform: translateX(-50%); 
+    width: 160px; 
+    height: auto; 
+    z-index: 1; 
+    border-radius: 1rem;
+}
 
-  #body {
-    font-family: 'SourceSans3', sans-serif;
-  }
-  
   input[type='range']::-moz-range-track {
     background: none;
   }
@@ -57,14 +63,28 @@
     filter: invert(1)
   }
 
+  .customIcon {
+    width: 15px;
+    height: 15px; 
+    margin-left: -15px; 
+    margin-right: 20px; 
+    margin-top: -7px;
+    margin-bottom: 10px;
+    overflow: visible;
+}
+
   .iconColor {
     color: #eee;
     filter: invert(1)
   }
 
   .textColor {
-    color: #eee;
-    filter: invert(1)
+    color: #cccccc;
+    font-size: 12px;
+  }
+
+  .textColor h6{
+    color: #858383;
   }
 
   #info {
@@ -74,3 +94,20 @@
   .section {
     border-left: 0.25rem solid rgb(0,163,224);
   }
+
+  .customButton {
+    color: #111111;
+    background-color: rgb(0,163,224) ;
+    border: none;
+    border-radius: 8px; 
+    padding: 20px 30px; 
+    cursor: pointer; 
+    display: inline-block;
+  }
+
+  .customLink {
+    display: inline-flex; 
+    align-items: center; 
+    text-decoration: none; 
+    margin-top: 25px;
+}
