--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
 @font-face {
     font-family: 'SourceSans3';
-    src: url('Fonts/SourceSans3-Regular.ttf') format('truetype'); 
-  }
+    src: url('Fonts/SourceSans3-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+  
   
   body {
     background-color: rgb(0,163,224) !important;/* Set your desired background color */
