--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 @font-face {
-    font-family: 'SourceSans3';
-    src: url('Fonts/SourceSans3-Regular.ttf') format('truetype');
+   font-family: 'SourceSans3-Regular';
+   src: url('Fonts/SourceSans3-Regular.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
   
   
   body {
-    background-color: rgb(0,163,224) !important;/* Set your desired background color */
+    background-color: rgb(0,163,224) !important;
     margin: 0;
     display: flex;
     align-items: center;
@@ -18,11 +18,31 @@
 
 .center-box {
   position: absolute;
-    width: 800px; /* Set your desired width */
-    height: 400px; /* Set your desired height */
-    background-color: rgb(17,17,17); /* Set your desired background color */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Optional: Add a box shadow for a subtle effect */
+    width: 800px;
+    height: 400px; 
+    background-color: rgb(17,17,17); 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
     padding: 100px 40px 40px 80px;
+    margin: 10px;
+
+  border-top: 4px dashed rgb(0,163,224); 
+  border-left: 4px dashed rgb(0,163,224); 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+.stitched {
+  padding: 20px;
+  margin: 10px;
+  background: #ff0030;
+  color: #fff;
+  font-size: 21px;
+  font-weight: bold;
+  line-height: 1.3em;
+  border: 2px dashed #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 0 4px #ff0030, 2px 1px 6px 4px rgba(10, 10, 0, 0.5);
+  text-shadow: -1px -1px #aa3030;
+  font-weight: normal;
 }
 
 .overlay-image{
