--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   
   
   body {
-    background-color: rgb(0,163,224) !important;/* Set your desired background color */
+    background-color: rgb(0,163,224) !important;
     margin: 0;
     display: flex;
     align-items: center;
@@ -18,22 +18,30 @@
 
 .center-box {
   position: absolute;
-    width: 800px; /* Set your desired width */
-    height: 400px; /* Set your desired height */
-    background-color: rgb(17,17,17); /* Set your desired background color */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Optional: Add a box shadow for a subtle effect */
+    width: 800px; 
+    height: 400px; 
+    background-color: rgb(17,17,17); 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
     padding: 100px 40px 40px 80px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.left-content,
+.right-content {
+  width: 100%;
 }
 
 .center-box::before {
   content: "\a0";
-  position: absolute; /* Position the pseudo-element relative to the box */
+  position: absolute; 
   top: 10%;
   left: 5%;
   display: block;
   width: 85%;
   height: 80%;
-  box-sizing: border-box; /* Include padding and border in total width/height */
+  box-sizing: border-box; 
   border-top: 6px dashed rgb(0, 163, 224);
   border-left: 6px dashed rgb(0, 163, 224);
 }
@@ -140,11 +148,11 @@
 
 .button-container {
   position: absolute;
-  top: 60%; /* Adjust as needed for vertical positioning */
-  left: 65%; /* Adjust as needed for horizontal positioning */
-  transform: translate(-50%, -50%); /* Center the container */
-  width: 225px; /* Set your desired width */
-  height: 255px; /* Set your desired height */
+  top: 60%; 
+  left: 65%; 
+  transform: translate(-50%, -50%); 
+  width: 225px; 
+  height: 255px; 
   display: flex;
   flex-direction: column;
 }
@@ -180,4 +188,25 @@
   left: 100%; 
   top: 65%; 
   transform: translate(10px, -50%); 
+}
+
+@media (max-width: 800px) {
+  .center-box {
+    position: absolute;
+      width: 100%;
+      height: 600px;
+      top: 25%;
+      flex-direction: column; 
+      align-items: center;
+  }
+  
+  .button-container {
+    position: absolute;
+    top: 75%;
+    left: 200px; 
+    width: 200px; 
+    height: 175px; 
+    display: flex;
+    flex-direction: column;
+  }
 }
